fixed some contrast issues

--- a/education-styles.css
+++ b/education-styles.css
@@ -32,7 +32,7 @@ main {
 nav {
     display: flex;
     flex-direction: column;
-    background-color: lightskyblue;
+    background-color: darkcyan;;
     width: 30%;
 }
 
@@ -98,7 +98,7 @@ footer {
 
 footer a {
     text-decoration: none;
-    color: lightskyblue;
+    color: white;
 }
 
 @media screen and (max-width: 900px) {
