--- a/skills-styles.css
+++ b/skills-styles.css
@@ -33,7 +33,7 @@ main {
 nav {
     display: flex;
     flex-direction: column;
-    background-color: lightskyblue;
+    background-color: darkcyan;;
     width: 30%;
 }
 
@@ -95,7 +95,7 @@ footer {
 
 footer a {
     text-decoration: none;
-    color: lightskyblue;
+    color: white;
 }
 
 @media screen and (max-width: 900px) {
